# radar-ai-tool

./: .gitignore  .pre-commit-config.yaml  RADAR_FRAMEWORK.md  README.md  pyproject.toml
radar_ai_tool/: __init__.py  radar_app.py  radar_langgraph_agent.py  radar_llm_integration.py
sample_documents/: Failed_Social_Media_Project_Postmortem.md  Q3_2024_Strategy.md  Team_B_Roadmap.md  User_Research_March_2024.md
