[project]
name = "radar-ai-tool"
version = "0.1.0"
description = "RADAR - AI Product Strategy Review Tool"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,!=3.9.7"
dependencies = [
    "streamlit>=1.28.0",
    "langchain>=0.0.350",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.40",
    "chromadb>=0.4.15",
    "openai>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
radar-app = "radar_ai_tool.radar_app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radar_ai_tool"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
